# docs/swagger.json
@@ -1,8 +1,8 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "A files server",
-        "title": "GIN Files API",
+        "description": "A simple file management API using Gin",
+        "title": "files-gin-go",
         "contact": {},
         "version": "1.0.0"
     },
@@ -17,7 +17,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "files"
+                    "Files"
                 ],
                 "summary": "Delete a file by filename",
                 "parameters": [
@@ -78,14 +78,14 @@
                 }
             }
         },
-        "/list-files": {
+        "/list": {
             "get": {
                 "description": "Retrieves a list of all files in the configured directory.",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "files"
+                    "Files"
                 ],
                 "summary": "List files",
                 "parameters": [
@@ -166,7 +166,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "files"
+                    "Files"
                 ],
                 "summary": "Upload a file",
                 "parameters": [
